# hsadventure

./: .gitignore  LICENSE  README  README.md  hadventure.cabal
Game/HAdventure/: Builder.hs  Engine.hs  FRef.hs  Prompt.hs  Types.hs
adventure/: NOTES  TODO  hadventure.cabal
adventure/Game/HAdventure/: Builder.hs  Engine.hs  Prompt.hs  Types.hs
adventure/example/: Dunnet.hs  TestAdv3.hs
adventure/old/: Adventure.hs
category/: LICENSE  category.cabal
category/Control/: Category.hs
category/Control/Category/: Defaults.hs  Properties.hs
category/Control/Category/Internal/: Comparable.hs
category/Data/: FRef.hs  Invertible.hs
category/Data/FRef/: Derive.hs
category/example/: DeriveExample.hs
category/test/: Tests.hs  tests.sh
example/: Dunnet.hs  README  TestAdv1.hs  TestAdv2.hs
