name:                hadventure
version:             0.2.0
stability:           experimental
synopsis:            EDSL for authoring text adventure games
description:         HAdventure is a set of Haskell libraries which
                     provide an expressive EDSL for authoring
                     interactive text adventure games.
category:            Game
build-type:          Simple
license:             BSD3
license-file:        LICENSE
extra-source-files:  README
author:              Brent Yorgey 
maintainer:          byorgey@gmail.com
build-Depends:       base >= 3 && < 5
                   , mtl == 2.*, transformers == 0.2.*
                   , containers, readline, fclabels, pretty
exposed-modules:     Game.HAdventure.Types
                     Game.HAdventure.Engine
                     Game.HAdventure.Builder
                     