Name:           category
Version:        0.0
License:        BSD3
License-file:   LICENSE
Author:         Twan van Laarhoven <twanvl@gmail.com>
Maintainer:     Twan van Laarhoven <twanvl@gmail.com>
Build-Depends:  base, template-haskell, QuickCheck < 2
Synopsis:       Control.Category framework
Description:    A framework for computations based on the mathematical notion of categories and morphisms.
Exposed-Modules:
        Control.Category,
        Control.Category.Defaults,
        Control.Category.Properties,
        Data.FRef,
        Data.FRef.Derive,
        Data.Invertible
Other-Modules:
        Control.Category.Internal.Comparable
GHC-Options: -Wall -fno-warn-orphans -XFlexibleContexts

